--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 
-#spring.data.mongodb.uri = mongodb://user:secret@mongo1.example.com:12345,mongo2.example.com:23456/test
-#spring.data.mongodb.uri= mongodb://heroku_xdktq9rb:1pk8jd36jeavi66soofprgk3q3@ds213612.mlab.com:13612/heroku_xdktq9rb?retryWrites=false
+#Uncomment next line to use in prod
+spring.data.mongodb.uri= mongodb://heroku_xdktq9rb:1pk8jd36jeavi66soofprgk3q3@ds213612.mlab.com:13612/heroku_xdktq9rb?retryWrites=false
 
 
+#Uncomment this code block to use in dev
 spring.data.mongodb.authentication-database=magickudosdb
 spring.data.mongodb.username=victorUser
 spring.data.mongodb.password=abc123@
