--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ spring.data.mongodb.uri= mongodb://heroku_xdktq9rb:1pk8jd36jeavi66soofprgk3q3@ds
 
 
 #Uncomment this code block to use in dev
-spring.data.mongodb.authentication-database=magickudosdb
-spring.data.mongodb.username=victorUser
-spring.data.mongodb.password=abc123@
-spring.data.mongodb.database=magickudosdb
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+#spring.data.mongodb.authentication-database=magickudosdb
+#spring.data.mongodb.username=victorUser
+#spring.data.mongodb.password=abc123@
+#spring.data.mongodb.database=magickudosdb
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
 
 
 
