Application properties dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #Uncomment next line to use in prod
-spring.data.mongodb.uri= mongodb://heroku_xdktq9rb:1pk8jd36jeavi66soofprgk3q3@ds213612.mlab.com:13612/heroku_xdktq9rb?retryWrites=false
+#spring.data.mongodb.uri= mongodb://heroku_xdktq9rb:1pk8jd36jeavi66soofprgk3q3@ds213612.mlab.com:13612/heroku_xdktq9rb?retryWrites=false
 
 
 #Uncomment this code block to use in dev
