updating application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,11 @@
+#Example of uri
+#spring.data.mongodb.uri=mongodb://<User>:<Password>@<Host>:<Port>/DB
 
 #Uncomment next line to use in prod
-#spring.data.mongodb.uri= mongodb://heroku_xdktq9rb:1pk8jd36jeavi66soofprgk3q3@ds213612.mlab.com:13612/heroku_xdktq9rb?retryWrites=false
-
+#spring.data.mongodb.uri=mongodb://heroku_xdktq9rb:1pk8jd36jeavi66soofprgk3q3@ds213612.mlab.com:13612/heroku_xdktq9rb?retryWrites=false
 
 #Uncomment this code block to use in dev
-spring.data.mongodb.authentication-database=magickudosdb
-spring.data.mongodb.username=victorUser
-spring.data.mongodb.password=abc123@
-spring.data.mongodb.database=magickudosdb
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=mongodb://victorUser:abcvictor123@localhost:27017/magickudosdb
 
-
-
+#spring.data.mongodb.uri = ${MY_MONGO_VAR}
 
