--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.data.mongodb.uri=mongodb://<User>:<Password>@<Host>:<Port>/DB
 
 #Uncomment next line to use in prod
-mongodb+srv://admin:1pk8jd36jeavi66soofprgk3q3@cluster0.6bfqm.mongodb.net/heroku_xdktq9rb?retryWrites=true&w=majority
+mongodb://ujlrfnljdctwuqeifheg:otp35d1k3lLgsxjFN5it@bdjcrfizjxmmpsk-mongodb.services.clever-cloud.com:27017/bdjcrfizjxmmpsk
 
 #Uncomment this code block to use in dev
 #spring.data.mongodb.uri=mongodb://victorUser:abcvictor123@localhost:27017/magickudosdb
