--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@
 
 #mongodb://ujlrfnljdctwuqeifheg:otp35d1k3lLgsxjFN5it@bdjcrfizjxmmpsk-mongodb.services.clever-cloud.com:27017/bdjcrfizjxmmpsk
 
-MONGODB_ADDON_URI=mongodb://ujlrfnljdctwuqeifheg:otp35d1k3lLgsxjFN5it@bdjcrfizjxmmpsk-mongodb.services.clever-cloud.com:27017/bdjcrfizjxmmpsk
+#MONGODB_ADDON_URI=mongodb://ujlrfnljdctwuqeifheg:otp35d1k3lLgsxjFN5it@bdjcrfizjxmmpsk-mongodb.services.clever-cloud.com:27017/bdjcrfizjxmmpsk
 
 #Uncomment this code block to use in dev
-#spring.data.mongodb.uri=mongodb://victorUser:abcvictor123@localhost:27017/magickudosdb
+spring.data.mongodb.uri=mongodb://victorUser:abcvictor123@localhost:27017/magickudosdb
 
