tentando de novo 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@
 #Uncomment next line to use in prod
 
 MONGODB_ADDON_URI=mongodb://ujlrfnljdctwuqeifheg:otp35d1k3lLgsxjFN5it@bdjcrfizjxmmpsk-mongodb.services.clever-cloud.com:27017/bdjcrfizjxmmpsk
-
+server.address=185.42.117.122
+server.port=27017
 
