--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,7 @@
 #spring.data.mongodb.uri=mongodb://<User>:<Password>@<Host>:<Port>/DB
 
 #Uncomment next line to use in prod
+spring.data.mongodb.uri=mongodb://ujlrfnljdctwuqeifheg:otp35d1k3lLgsxjFN5it@bdjcrfizjxmmpsk-mongodb.services.clever-cloud.com:27017/bdjcrfizjxmmpsk
 
-MONGODB_ADDON_URI=mongodb://ujlrfnljdctwuqeifheg:otp35d1k3lLgsxjFN5it@bdjcrfizjxmmpsk-mongodb.services.clever-cloud.com:27017/bdjcrfizjxmmpsk
-server.address=185.42.117.122
-server.port=27017
-
+#Uncomment this code block to use in dev
+#spring.data.mongodb.uri=mongodb://victorUser:abcvictor123@localhost:27017/magickudosdb
