changing application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 #spring.data.mongodb.uri=mongodb://<User>:<Password>@<Host>:<Port>/DB
 
 #Uncomment next line to use in prod
-#spring.data.mongodb.uri=mongodb://ujlrfnljdctwuqeifheg:otp35d1k3lLgsxjFN5it@bdjcrfizjxmmpsk-mongodb.services.clever-cloud.com:27017/bdjcrfizjxmmpsk
+spring.data.mongodb.uri=mongodb://ujlrfnljdctwuqeifheg:otp35d1k3lLgsxjFN5it@bdjcrfizjxmmpsk-mongodb.services.clever-cloud.com:27017/bdjcrfizjxmmpsk
 
 #Uncomment this code block to use in dev
-spring.data.mongodb.uri=mongodb://victorUser:abcvictor123@localhost:27017/magickudosdb
+#spring.data.mongodb.uri=mongodb://victorUser:abcvictor123@localhost:27017/magickudosdb
 
